service.yaml
apiVersion: v1
kind: Service
metadata:
  name: barberia-service
spec:
  selector:
    app: barberia
  ports:
    - port: 80
      targetPort: 80
